umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_extended_mol_indigo_Threonine.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 8
bond_count: 7
sum_formula: C4NO3
